@@ -62,6 +62,10 @@ Release 1.0 (in development)
 Release 0.6.4 (in development)
 ==============================
 
+* Restore compatibility with Pygments >= 1.2.
+
+* #295: Fix escaping of hyperref targets in LaTeX output.
+
 * #302: Fix links generated by the ``:doc:`` role for LaTeX output.
 
 * #286: collect todo nodes after the whole document has been read;
